--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stysheet" type="text/css" href="./assets/css/style.css">
+
         <link rel="stysheet" type="text/css" href="./bootstrap/css/bootstrap.min.css">
+        <link rel="stysheet" type="text/css" href="./bootstrap/css/bootstrap.min.css.map">
+        <link rel="stysheet" type="text/css" href="./bootstrap/css/bootstrap.css">
+        <link rel="stysheet" type="text/css" href="./bootstrap/css/bootstrap.css.map">
+        <link rel="stysheet" type="text/css" href="./bootstrap/css/bootstrap-theme.css">
+        <link rel="stysheet" type="text/css" href="./bootstrap/css/bootstrap-theme.css.map">
+        <link rel="stysheet" type="text/css" href="./bootstrap/css/bootstrap-theme.min.css">
+        <link rel="stysheet" type="text/css" href="./bootstrap/css/bootstrap-theme.min.css.map">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
@@ -11,11 +21,19 @@
             <h2>ABOUT US</h2>
             <img class="img-responsive" src="./assets/img/empresa.jpg">
 
-            <h2 data-toggle="collapse" data-target="#primeiro-paragrafo">Desde 1995</h2>
-            <p id="primeiro-paragrafo" class="collapse in"> The TopCasaFina Arquicheture has been on the market since...</p>
-            <h2 data-toggle="collapse" data-target="#segundo-paragrafo">Desde 1995</h2>
+        <div class="panel panel-default">    
+            <div class="panel-heading">
+                <h3 data-toggle="collapse" data-target="#primeiro-paragrafo">Since 1995</h3>
+            </div>    
+
+            <div class="panel-body">
+                <p id="primeiro-paragrafo" class="collapse in"> Since 1935, bringing beautiful houses, mansions and buildings to the world.</p>
+            </div>
+        </div>
+
+            <h3 data-toggle="collapse" data-target="#segundo-paragrafo">Good prices</h3>
             <p id="segundo-paragrafo" class="collapse"> The TopCasaFina Arquicheture has been on the market since...</p>
-            <h2 data-toggle="collapse" data-target="#terceiro-paragrafo">Desde 1995</h2>
+            <h3 data-toggle="collapse" data-target="#terceiro-paragrafo">Happy in collaborating for a more beautiful world</h3>
             <p id="terceiro-paragrafo" class="collapse"> The TopCasaFina Arquicheture has been on the market since...</p>
         </div>
 
